# CrackDetect

./: .dvcignore  .gitignore  Makefile  README.md  data.dvc  feature_investigation.md  investigateData.py  pyproject.toml  requirements.txt  submit.sh  sweep_config.yaml  todo.md
.dvc/: config
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: GM_align.ipynb  POI.ipynb  area_of_interest.ipynb  area_of_interest_data.ipynb  area_of_interest_weights.ipynb  check_z_acceleration.ipynb  feature_extraction.ipynb  get_map_from_lat_lon.ipynb  gopro.ipynb  interpolation.ipynb  investigate_before_n_after_convert.ipynb  label_visualisation.ipynb  make_dataset.ipynb  predict_model.ipynb  temp_predict_all.ipynb  train_model.ipynb
notebooks/legacy/: gopro.ipynb  platoon_everything_plots.ipynb
src/: __init__.py  main.py  predict_model.py  sandbox.ipynb  train_hydra_mr.py  train_model.py  train_sktime_model.py  validate_model.py
src/data/: AOI_to_map.py  __init__.py  area_of_interest.py  area_of_interest_weights.py  check_hdf5.py  dataloader.py  feature_dataloader.py  feature_extraction.py  investigateData.py  make_dataset.py  points_of_interest_mapping.py  points_of_interest_to_road.py  points_of_interest_weights.py  quarter_car_model.py  temp_load_p79.py  validate_data.py
src/hydra/: hydra_regressor.py  playground.py
src/models/: hydramr.py  regressor.py
src/util/: __init__.py  utils.py
src/validation/: clean_int.m  distance_gps.m  paltoon_qcar_val.m  platoon_energy_val.m  platoon_sensor_val.m
(+17 files in other folders)
